--- a/studies/node/employees/package.json
+++ b/studies/node/employees/package.json
@@ -2,8 +2,9 @@
   "name": "employees",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "employees.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
